CHSUB-394: Explore page shimmer responsive layout issue fixed

--- a/components/cards/StoryCard/storyCardSkeleton.module.scss
+++ b/components/cards/StoryCard/storyCardSkeleton.module.scss
@@ -3,8 +3,10 @@
   border-radius: 10px;
   background-color: red;
   animation: skeleton-loading 1s linear infinite alternate;
-  width: 575px;
-  height: 300px;
+  min-height: 225px;
+  height: 100%;
+  width: 100%;
+  margin: 30px;
 }
 
 @keyframes skeleton-loading {
